--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
           <button id="b" type="submit" name="vote" class="b" value="b">{{option_b}}</button>
         </form>
         <div id="tip">
-          (Result: Always Girls win.........yes)
+          (Result: Always Girls win.........)
         </div>
         <div id="result">
 
