--- a/templates/index.html
+++ b/templates/index.html
@@ -48,8 +48,8 @@ button {
     <center> <h1> Student Login Form </h1> </center>   
     <form>  
         <div class="container">   
-            <label>Username : </label>   
-            <input type="text" placeholder="Enter Username" name="username" required>  
+            <label>Username your name only : </label>   
+            <input type="text" placeholder="Enter Username then password" name="username" required>  
             <label>Password : </label>   
             <input type="password" placeholder="Enter Password" name="password" required>  
             <button type="submit">Login in </button>   
